tests/core/data/csl/InterfaceTypeTests/InvalidDeclarations/RaisesInvalidType.csl
// method raises a type that is not an exception
interface RaisesInvalidType 
{
	void foo() 
	raises NotAnExceptionType;
 
};


